# blackmatter-kubernetes

./: .typescape.yaml  CLAUDE.md  README.md  flake.nix
kikai/: Cargo.toml
kikai/src/: config.rs  daemon.rs  destroy.rs  disk.rs  down.rs  health.rs  init.rs  main.rs  sops.rs  status.rs  up.rs  vm.rs
lib/: distributions.nix  k3s-ami.nix  kubernetes-base.nix  profiles.nix
lib/versions/: default.nix  kubernetes-1.30.nix  kubernetes-1.31.nix  kubernetes-1.32.nix  kubernetes-1.33.nix  kubernetes-1.34.nix  kubernetes-1.35.nix
module/: default.nix
module/home-manager/: default.nix
module/k9s/: default.nix
module/kubernetes/: default.nix
module/nixos/: default.nix
module/nixos/k3s/clean-stop/: Cargo.toml
module/nixos/k3s/clean-stop/src/: main.rs
pkgs/cluster/: clusterctl.nix  crossplane-cli.nix  default.nix  kind.nix  kompose.nix  kwok.nix  talosctl.nix  vcluster.nix  velero.nix
pkgs/gitops/: argo-rollouts.nix  argocd.nix  default.nix  kapp.nix  tektoncd-cli.nix  timoni.nix
pkgs/k3s/: builder.nix  default.nix
pkgs/kubernetes/: cni-plugins.nix  containerd.nix  crictl.nix  default.nix  etcd-hashes.nix  etcd.nix  kube-apiserver.nix  kube-controller-manager.nix  kube-proxy.nix  kube-scheduler.nix  kubeadm.nix  kubectl.nix  kubelet.nix  mk-runtime-component.nix  runc.nix  source.nix
pkgs/network/: calico.nix  cmctl.nix  cni-plugin-flannel.nix  cni-plugins.nix  default.nix  flannel.nix  hubble.nix  istioctl.nix  linkerd.nix  multus-cni.nix
pkgs/observability/: consul.nix  coredns.nix  default.nix  kube-state-metrics.nix  logcli.nix  mimirtool.nix  (+3 more)
(+95 files in other folders)
